Deployment/chatbot-programming-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-programming-service
  namespace: default
  labels:
    app: chatbot-programming-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-programming-service
  template:
    metadata:
      labels:
        app: chatbot-programming-service
    spec:
      containers:
      - name: chatbot-programming-service
        image: panchodm07/chatbot-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-programming-service-svc
  namespace: default
  labels:
    app: chatbot-programming-service
spec:
  type: ClusterIP
  selector:
    app: chatbot-programming-service
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-programming-service-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: chatbotprogra.inf326.nursoft.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatbot-programming-service-svc
            port:
              number: 8001
  tls:
  - hosts:
    - chatbotprogra.inf326.nursoft.dev
    secretName: chatbot-programming-service-tls
