Deployment/deployment-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-svc-api-gateway  
spec:
  type: ClusterIP
  selector:
    app: chatbot-svc-api-gateway 
  ports:
    - port: 3000
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-svc-api-gateway  
spec:
  selector:
    matchLabels:
      app: chatbot-svc-api-gateway 
  template:
    metadata:
      labels:
        app: chatbot-svc-api-gateway 
    spec:
      containers:
        - name: chatbot-svc-api-gateway 
          image: panchodm07/api-gateway:latest
          ports:
            - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-programming-api-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: chatbotprograapi.inf326.nursoft.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatbot-svc-api-gateway
            port:
              number: 3000
  tls:
  - hosts:
    - chatbotprograapi.inf326.nursoft.dev
    secretName: chatbot-programming-api-tls
